--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 								&nbsp;&nbsp;&nbsp;&nbsp;
 							</td>
 							<td>
-								<a href="index.html#/5" target="_none">					
+								<a href="/#/5" target="_none">					
 									<div style="color:White">English <img src="img/FlagUS.png" height="20px" width="35px"/></div> 	
 									<br/>
 									bit.ly/lwc_dnd
