--- a/index_ja.html
+++ b/index_ja.html
@@ -170,7 +170,7 @@
 								&nbsp;&nbsp;&nbsp;&nbsp;
 							</td>
 							<td>
-								<a href="/#/5" target="_none">					
+								<a href="lwc_dnd_20/#/5" target="_none">					
 									<div style="color:Gray">English <img src="img/FlagUS.png" height="20px" width="35px"/></div> 	
 									<br/>
 									bit.ly/lwc_dnd
